<resources>

    <!-- Application -->
    <string name="app_name">Eternal Friend</string>
    <string name="action_search">Search nearby veterinarian and pet shops</string>
    <string name="image_not_picked">You haven\'t picked Image</string>
    <string name="error_saving">We can\'t save that in this moment</string>

    <!-- Maps -->
    <string name="title_activity_maps">Eternal Friend Map</string>
    <string name="veterinarian">Veterinarian</string>
    <string name="pet_shop">Pet Shop</string>

    <!--Profile summarize-->
    <string name="title_activity_profile_summarize">Pets Profile</string>
    <string name="action_add_profile">Add pet profile</string>
    <string name="card_item_description">Pet profile</string>

    <!--Add profile-->
    <string name="add_profile">Add profile</string>
    <string name="pet_name_hint">Pet Name</string>
    <string name="pet_pet_profile_picture_label">Pet\'s profile picture</string>
    <string name="pet_birth_label">Birth date</string>
    <string name="pet_birth_value">Select one</string>
    <string name="pet_breed_hint">Pet\'s Breed</string>
    <string name="date_format">LLLL, dd yyyy</string>
    <string name="date_picker_date_text"><![CDATA[<u>%1$s</u>]]></string>
    <string name="save_message">%1$s\'s profile added successfully</string>
    <string name="delete_message">%1$s\'s profile deleted successfully</string>
    <string name="go_to_profiles">See profiles</string>
    <string name="invalid_values">Your pets profile is not complete!</string>
    <string name="invalid_pet_picture">No picture selected</string>
    <string name="invalid_pet_name">Empty pet name</string>
    <string name="invalid_pet_birth_date">Select a date</string>
    <string name="invalid_pet_breed">Empty pet breed</string>
    <string name="option_camera">Take a picture</string>
    <string name="option_gallery">Choose from Gallery</string>
    <string name="no_image_picked">You haven\'t picked Image</string>
    <string name="image_picker_title">Profile Image</string>
    <string name="cat_dialog_title">Cat Breeds</string>
    <string name="dog_dialog_title">Dog Breeds</string>

    <!-- Gallery -->
    <string name="gallery_save_message">Picture successfully added to age %1$s\'s years</string>
    <string name="dismiss">Dismiss</string>
    <string name="no_Image_in_gallery">You haven\'t added any picture</string>
    <string name="share_with">Share with</string>
    <string name="gallery_image_year">%1$d year</string>
    <string name="gallery_image_years">%1$d years</string>
    <string name="gallery_image_all_ages">all</string>
    <string name="menu_age_title">age</string>
    <string name="gallery_bar_title_format">%1$s\'s Gallery</string>

    <!-- Profile -->
    <string name="profile">Profile</string>
    <string name="clinical_history">Clinical\nHistory</string>
    <string name="vaccination_plan">Vaccination\nPlan</string>
    <string name="birth_date_format">Birth date: %1$s</string>

    <!-- Profile adapter -->
    <string name="delete_prompt">Do you want to delete %1$s\'s profile?</string>
    <string name="delete_button_delete">Delete</string>
    <string name="delete_button_cancel">Cancel</string>
    <string name="no_profiles">You haven\'t added any pet\'s profile</string>
    <string name="add_profile_cat_radio">Cat</string>
    <string name="add_profile_dog_radio">Dog</string>
    <string name="add_profile_other_radio">Other</string>

    <!-- Ask for Permission Dialogs-->
    <string name="permission_dialog_tittle">You need additional Permissions</string>
    <string name="permission_from_settings_info">Maybe you check \"Don\'t ask again\" in a past permission request so you will need to grant permissions from application settings manually</string>
    <string name="permission_location_info">In order to obtain nearest pet shops and veterinarian, application needs to know your actual location.</string>
    <string name="permission_write_storage_info">In order to store in your gallery your pet\'s picture, application needs to have access to your storage</string>
    <string name="permission_from_settings_ok_button">Go to settings</string>
    <string name="permission_from_activity_ok_button">Grant permissions</string>
    <string name="permission_cancel_button">Maybe later</string>

    <!-- clinical history -->
    <string name="no_clinical_history">Yo haven\'t added any clinical history</string>
    <string name="clinical_history_card_item_description">Pet clinical history</string>
    <string name="clinical_history_hospital_label">Hospital</string>
    <string name="clinical_history_date_label">Date</string>
    <string name="clinical_history_diagnostic_label">Diagnostic</string>
    <string name="clinical_history_treatment_label">Treatment</string>
    <string name="attendance_date_label">Attendance date</string>
    <string name="hospital_hint">Hospital name</string>
    <string name="diagnostic_hint">Veterinarian diagnostic</string>
    <string name="treatment_hint">Veterinarian treatment</string>
    <string name="add_history">Add History</string>
    <string name="invalid_attendance_date">Select a date</string>
    <string name="invalid_hospital">missing hospital name</string>
    <string name="invalid_diagnostic">missing diagnostic</string>
    <string name="invalid_treatment">missing treatment</string>
    <string name="clinical_history_added">Clinical history added successfully</string>
    <string name="add_clinical_history">Add Clinical history</string>
    <string name="history_invalid_values">Your clinical history is incomplete</string>
    <string name="clinical_bar_title_format">%1$s\'s History</string>

    <!-- Vaccination plan -->
    <string name="no_vaccination_plan">Yo haven\'t added any vaccination plan</string>
    <string name="vaccination_date_label">Programmed date</string>
    <string name="vaccination_name_label">name</string>
    <string name="planned_date_label">Planned date</string>
    <string name="add_vaccination">Add vaccination</string>
    <string name="vaccination_invalid_values">Your vaccination is incomplete</string>
    <string name="vaccination_added">Vaccination added successfully</string>
    <string name="add_vaccination_plan">Add vaccination plan</string>
    <string name="vaccination_name_hint">Vaccination name</string>
    <string name="vaccination_bar_title_format">%1$s\'s Vaccines</string>

    <!-- Notifications -->
    <string name="notification_title">Pending vaccinations</string>
    <string name="notification_content">You have pending vaccinations for: %1$s</string>

    <!-- Preferences -->
    <string name="pref_vaccine_notifications">Vaccination notifications</string>
    <string name="get_daily_notifications">Receive Daily Vaccination notifications</string>
    <string name="title_activity_settings">Settings</string>
    <string name="vaccination_pref_key" translatable="false">notifications_vaccination</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
